tests/reject/if_expr_no_else.ty
# A value `if` must have an `else` — every path must produce a value (both compilers).
fn main():
    x := if true:
        1
    println(str(x))
